--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,17 +6,48 @@ on:
   workflow_dispatch:
 
 jobs:
-  Build:
-    name: Build Docker
+  Deploy:
+    name: Deploy APP to ElasticBeanstalk
     runs-on: ubuntu-latest
     steps:
       - name: Code Checkout
         uses: actions/checkout@v4
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
       - name: Set Up Npm
         run: |
           sudo apt install npm
 
-      - name: Install Dependency
+      - name: Npm init
         working-directory: code
         run: npm i
+
+      - name: Install python
+        working-directory: code
+        run: |
+          sudo apt update && sudo apt upgrade -y
+          sudo apt install python3 python3-pip -y
+          python3 --version
+          pip3 --version
+
+      - name: Install EB Cli
+        working-directory: code
+        run: |
+          pip3 install awsebcli --upgrade --user
+          nano ~/.bashrc
+          export PATH=$PATH:~/.local/bin
+          source ~/.bashrc
+          eb --version
+
+      - name: Deploy
+        working-directory: code
+        run: |
+          eb init
+          eb create
+          eb deploy
