--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,6 +46,11 @@ jobs:
       - name: Deploy
         working-directory: code
         run: |
-          eb init  --region us-east-1 --platform "Python 3.8" --application "my-app"
+          eb init  --region us-east-1 --platform "Python 3.8"
+          echo "global:" > .elasticbeanstalk/config.yml
+          echo "  application_name: my-app" >> .elasticbeanstalk/config.yml
+          echo "  default_region: us-east-1" >> .elasticbeanstalk/config.yml
+          echo "  platform: Python 3.8" >> .elasticbeanstalk/config.yml
+          echo "  workspace_type: Application" >> .elasticbeanstalk/config.yml
           eb create
           eb deploy
