--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,7 +43,7 @@ jobs:
           export PATH=$PATH:~/.local/bin
           eb --version
 
-      - name: Deploy
+      - name: eb Init
         working-directory: code
         run: |
           eb init  --region us-east-1 --platform "Python 3.8" --interactive false --no-verify-ssl --quiet
@@ -52,5 +52,9 @@ jobs:
           echo "  default_region: us-east-1" >> .elasticbeanstalk/config.yml
           echo "  platform: Python 3.8" >> .elasticbeanstalk/config.yml
           echo "  workspace_type: Application" >> .elasticbeanstalk/config.yml
+      
+      - name: Create and Deploy
+        working-directory: code
+        run: |
           eb create
           eb deploy
