--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,7 +46,7 @@ jobs:
       - name: eb Init
         working-directory: code
         run: |
-          eb init  --region us-east-1 --platform "Python 3.8" --interactive false --no-verify-ssl
+          eb init  --region us-east-1 --platform "Python 3.8" --interactive false --no-verify-ssl --keyname test
           echo "global:" > .elasticbeanstalk/config.yml
           echo "  application_name: my-app" >> .elasticbeanstalk/config.yml
           echo "  default_region: us-east-1" >> .elasticbeanstalk/config.yml
