--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,5 +52,5 @@ jobs:
           echo "  default_region: us-east-1" >> .elasticbeanstalk/config.yml
           echo "  platform: node.js-18" >> .elasticbeanstalk/config.yml
           echo "  workspace_type: Application" >> .elasticbeanstalk/config.yml
-          eb create
+          eb create  --platform "node.js-18"
           eb deploy
