--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -56,5 +56,5 @@ jobs:
           echo "  default_region: us-east-1" >> .elasticbeanstalk/config.yml
           echo "  platform: node.js-18" >> .elasticbeanstalk/config.yml
           echo "  workspace_type: Application" >> .elasticbeanstalk/config.yml
-          eb create my-env --platform "node.js-18"
+          #eb create my-env --platform "node.js-18"
           eb deploy
